chore: configure WebFlux, R2DBC, Flyway, JWT, CORS and domain exceptions
- Register modules r2dbc-postgresql and security-jwt in settings.gradle
- Add R2DBC, Flyway, JWT, MapStruct, SpringDoc, Security dependencies to app-service
- Rewrite application.yaml for PostgreSQL R2DBC + Flyway + JWT (SB 4.0.5)
- Copy db_schema_v3.sql as Flyway V1__initial_schema.sql
- Add R2dbcConfig with EnableR2dbcAuditing and UUID converters
- Add CorsConfig supporting all HTTP methods and Authorization header
- Add DomainException sealed hierarchy (Not/Conflict/Validation/Unauthorized/Forbidden)
- Add ApiError record and GlobalErrorWebExceptionHandler (WebExceptionHandler)
- Add TokenProviderGateway interface in domain/model
- Add JwtTokenProvider implementation (jjwt 0.12.6)
- Add SecurityConfig with JWT filter and role-based route protection

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>